@@ -864,6 +864,9 @@
         ircuser = "pokhbocee"
     [/entry]
     [entry]
+        name = "Eugene Kosov (kevg)"
+    [/entry]
+    [entry]
         name = "FAAB"
     [/entry]
     [entry]
